--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ a:visited {
 body {
 	font-family: "Marker Felt", "Comic Sans MS", fantasy;
 	color: #0d0da5;
-	background: url(https://tenor.com/view/maki-nishikino-love-live-gif-5438439);
+	background: url(https://xserani.github.io/maki/8aae1b2ae2252a638a976d680f462a1da96d1179_hq.gif);
 }
 
 h1 {
