--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ a:visited {
 body {
 	font-family: "Marker Felt", "Comic Sans MS", fantasy;
 	color: #0d0da5;
-	background: url(https://xserani.github.io/maki/8aae1b2ae2252a638a976d680f462a1da96d1179_hq.gif);
+	background: url(https://xserani.github.io/2maki/0_hq.gif);
 }
 
 h1 {
