--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ body {
 	font-family: "Marker Felt", "Comic Sans MS", fantasy;
 	color: #0d0da5;
 	background: url(https://xserani.github.io/2maki/0_hq.gif);
+	background-repeat: repeat-y
 }
 
 h1 {
