--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ a:visited {
 body {
 	font-family: "Marker Felt", "Comic Sans MS", fantasy;
 	color: #0d0da5;
-	background: url(2maki/t.gif)no-repeat center center fixed; 
+	background: url(2maki/to.jpg)no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
